@@ -1,6 +1,11 @@
 master
 ------
 
+        * Added CURLOPT_PROXY_SSLCERT, CURLOPT_PROXY_SSLCERTTYPE,
+          CURLOPT_PROXY_SSLKEY, CURLOPT_PROXY_SSLKEYTYPE,
+          CURLOPT_PROXY_SSL_VERIFYPEER (libcurl 7.52.0+,
+          patch by Casey Miller).
+
         * Added CURLOPT_PRE_PROXY (libcurl 7.52.0+, patch by ziggy).
 
         * Support for Python 2.6 officially dropped.
